--- a/ai-thon/index.html
+++ b/ai-thon/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Finance & Dashboard</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <header>
@@ -73,9 +73,14 @@
         <li>No data</li>
       </ul>
     </section>
+
+    <!-- Monthly Expenses Graph -->
+    <section class="card wide">
+      <h2>📈 Monthly Expenses</h2>
+      <canvas id="expensesChart" height="100"></canvas>
+    </section>
   </main>
 
   <script src="script.js"></script>
 </body>
 </html>
-
